<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:contentPadding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_id"
                    android:textColor="@color/book_list_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" : "
                    android:textColor="@color/book_list_color" />

                <TextView
                    android:id="@+id/tvBookId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/book_list_color" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_name"
                    android:textColor="@color/book_list_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" : "
                    android:textColor="@color/book_list_color" />

                <TextView
                    android:id="@+id/tvBookName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/book_list_color" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_type"
                    android:textColor="@color/book_list_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" : "
                    android:textColor="@color/book_list_color" />

                <TextView
                    android:id="@+id/tvBookType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/book_list_color" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_year"
                    android:textColor="@color/book_list_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" : "
                    android:textColor="@color/book_list_color" />

                <TextView
                    android:id="@+id/tvBookYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/book_list_color" />
            </TableRow>

            <TableRow>

            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btnBorrow"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/book_borrow" />
    </LinearLayout>

</android.support.v7.widget.CardView>