<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BorrowActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:text="Date: 12/12/12" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:contentPadding="16dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_id"
                        android:textColor="@color/book_list_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" : "
                        android:textColor="@color/book_list_color" />

                    <TextView
                        android:id="@+id/tvBookId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/book_list_color" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_name"
                        android:textColor="@color/book_list_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" : "
                        android:textColor="@color/book_list_color" />

                    <TextView
                        android:id="@+id/tvBookName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/book_list_color" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_type"
                        android:textColor="@color/book_list_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" : "
                        android:textColor="@color/book_list_color" />

                    <TextView
                        android:id="@+id/tvBookType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/book_list_color" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_year"
                        android:textColor="@color/book_list_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" : "
                        android:textColor="@color/book_list_color" />

                    <TextView
                        android:id="@+id/tvBookYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/book_list_color" />
                </TableRow>
            </TableLayout>
        </android.support.v7.widget.CardView>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etNik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nik" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabBorrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_check"
        app:fabSize="normal" />
</android.support.design.widget.CoordinatorLayout>